--- a/final/templates/Data.html
+++ b/final/templates/Data.html
@@ -15,78 +15,84 @@
 <div class="wrapper">
 		<div class="top-bar fix">
 			<div class="top-bar-links">
-            <ul>
-            	<li><a href="{% url 'register' %}">Register</a></li>
+        <ul>
+          {%if user.is_authenticated %}
+          <li>Hello,{{user.username}}</li>
+          <li><a href="accouts/logout">Logout</a></li>
+            {% else %}
+            <li><a href="{% url 'register' %}">Register</a></li>
                 <li><a href="{% url 'login' %}">Login</a></li>
-                 <li><a href="{% url 'help' %}">Help</a></li>
-            </ul>
+          {%endif%}
 
-			<div class="socialmedia">
-        <ul>
-        <a href="https://www.facebook.com" class="fa fa-facebook"></a>
-        <a href="https://twitter.com" class="fa fa-twitter"></a>
-        <a href="https://www.instagram.com" class="fa fa-instagram"></a>
+             
         </ul>
-              </div>
-
-               </div>
-
-		   </div>
-    <header class="fix">
-       <div class="image">
-
-      <img src="../static/images/dengue_banner.jpg" />
-       </div>
+  
+<div class="socialmedia">
+<ul>
+<a href="https://www.facebook.com" class="fa fa-facebook"></a>
+<a href="https://twitter.com" class="fa fa-twitter"></a>
+<a href="https://www.instagram.com" class="fa fa-instagram"></a>
+</ul>
+    </div>
 
 
 
-        </header>
+     </div>      
+
+</div>
+<header class="fix">
+<div class="image">
+ 
+<img src="../static/images/dengue_banner.jpg" />
+</div>
 
 
-          <nav>
-        <ul>
-        <li><a href="{% url 'home' %}">Home</a></li>
-           <li><a href="{% url 'disease' %}">Disease Description</a></li>
-           <li><a href="{% url 'data' %}">Data</a></li>
-        <li><a href="{% url 'maps' %}">Maps</a></li>
-         <li><a href="{% url 'prediction' %}">Prediction </a></li>
-        <li><a href="{% url 'feedback' %}">Feedback </a></li>
-        <li><a href="{% url 'about' %}">About us</a></li>
-        </ul>
-         </nav>
+
+</header>
+<nav>
+  <ul>
+    <li><a href="{% url 'home' %}">Home</a></li>
+       <li><a href="{% url 'dd' %}">Disease Description</a></li>
+       <li><a href="{% url 'data' %}">Data</a></li>
+    <li><a href="{% url 'maps' %}">Maps</a></li>
+     <li><a href="{% url 'prediction' %}">Prediction </a></li>
+    <li><a href="{% url 'FeedbackView' %}">Feedback </a></li>
+    <li><a href="{% url 'about' %}">About us</a></li>
+    </ul>
+</nav>
 </br>
 </br>
-<form action="">
+<form action="data" method="POST">
+  {% csrf_token %}
 <br>
     <br>
   <div class="container4">
       <h14><center><b>Data Form </b> </center></h14>
       <br>
       <br>
-    <label for="Name"><b>Name of theOfficer</b></label>
-    <input type="text" placeholder="Enter your name" name="Name" required>
+    <label for="Name"><b>Name of the officer</b></label>
+    <input type="text" id="Name" placeholder="Enter your name" name="Name">
       <br>
     <label for="Year"><b> Year </b></label>
-    <input type="text" placeholder="Enter the year " name="Year" required>
+    <input type="text"id="Year" placeholder="Enter the year " name="Year" >
         <br>
     <label for="Month"><b>Month</b></label>
-    <input type="text" placeholder="Enter the month" name="Month" required>
+    <input type="text" id="Month" placeholder="Enter the month" name="Month" >
       <br>
     <label for="NumberOfDengueCase"><b>Number of dengue cases</b></label>
-    <input type="text" placeholder="Enter the number of dengue cases" name="Number of dengue cases" required>
+    <input type="text"  id="NumberOfDengueCase" placeholder="Enter the number of dengue cases" name="NumberOfDengueCase" >
       <br>
-      <label for="MOH Office "><b>MOH Office</b></label>
-    <input type="text" placeholder="Enter the MOH Office" name="MOH Office" required>
+      <label for="MOHOffice "><b>MOH Office</b></label>
+    <input type="text" id="MOHOffice" placeholder="Enter the MOHOffice" name="MOHOffice" >
       <br>
 
-    <button type="submit" class="submitbtn">Submit the data</button>
-
+      <center><input type="submit" value="Submit"></center>
+  </form>
 
 
   </div>
 
 
-</form>
 
 
   <footer class="fix2">
