--- a/final/templates/ViewFeedback.html
+++ b/final/templates/ViewFeedback.html
@@ -6,6 +6,7 @@
 <title>Dengue Prediction System </title>
     {% load static%}
 <link rel="stylesheet"  type="text/css" href="{%static 'css\main.css'%}"/>
+<link rel="stylesheet"  type="text/css" href="{%static 'css\table.css'%}"/>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
 
 </head>
@@ -59,76 +60,46 @@
                 <li><a href="{% url 'about' %}">About us</a></li>
                 </ul>
          </nav>
+         <br>
+         <br>
+         <br>
+         <table>
+             <thead>
+               <tr>
+                   <th>Name</th>
+                   <th>Email</th>
+                   <th>Description</th>
+                   <th>Actions</th>
+               </tr>
+             </thead>
+             {%for feedback in feedback %}
+             <tr>
+                
+                 <td>{{feedback.name}}</td>
+                 <td>{{feedback.email}}</td>
+                 <td>{{feedback.description}}</td>
+                 <td>
+                     <a href="/editfeedback/{{feedback.id}}"><button class="edit">Edit</button></a>
+                     <a href="/deleteFeedback/{{feedback.id}}"><button class="delete">Delete</button></a>
+                 </td>
+                 
 
-
-
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-
-
-
-<div class= "para">
-<center><h3>Medical Officer of Health (MOH) </h3></center>
-<br/>
-<br/>
-
-<center><p>Medical officer of health or MOH is the leader of Medical Officer Of Health (MOOH) offices.</p></center>
-        </div>
-        <br/>
-        <br/>
-
-        <p1>
-        <br/>
-        Maligawatta Secretariate Buliding,
-P.O.Box 876.
-Colombo 10.
-            <br>
-            <br>
-            <br>
-
-Tel:- +94112434660
-                       <br>
-            <br>
-            <br>
-
-Fax:- +94112478872
-                        <br>
-            <br>
-            <br>
-
-E-mail :- info@healthdept.wp.gov.lk
-                        <br>
-            <br>
-            <br>
-
-
-
-
-
-        </p1>
-<br/>
-        <br/>
-
-        <br/>
-
-
-     
-     <footer class="fix2">
- <div class="copyrights " >
-        <div class="left">
-        @ 2020 Copyright Dengue Prediction System.All Rights Reserved.
-        </div>
-        <div class="right ">
-        Website by:Adhee
-        </div>
-        </div>
-        </footer>
-        </div>
-
-
-</body>
-</html>
+             </tr>
+              {%endfor%}
+         </table>
+         <footer class="fix2">
+            <div class="copyrights " >
+                   <div class="left">
+                   @ 2020 Copyright Dengue Prediction System.All Rights Reserved.
+                   </div>
+                   <div class="right ">
+                   Website by:Adhee
+                   </div>
+                   </div>
+                   </footer>
+                   </div>
+           
+           
+           </body>
+           </html>
+           
