--- a/final/templates/editfeedback.html
+++ b/final/templates/editfeedback.html
@@ -67,20 +67,20 @@
 
 <div class="container">
     <h14><center><b>Feedback</b></center></h14>
-  <form action="FeedbackView" method="POST">
+  <form action="/UpdateFeedback/{{feedback.id}}"" method="POST">
     {% csrf_token %}
   
     <label for="name">Name </label>
-    <input type="text" id="name" name="name" placeholder="Your  name..">
+    <input type="text" id="name" name="name" placeholder="Your  name.." value="{{feedback.name}}">
 
      <label for="email">Email</label>
-    <input type="text" id="email" name="email" placeholder="Your email..">
+    <input type="text" id="email" name="email" placeholder="Your email.."value="{{feedback.email}}">
 
    
     <label for="description">Description</label>
-    <input type="text" id="description" name="description" placeholder="Write something..">
+    <input type="text" name="description" placeholder="Write something.." value="{{feedback.description}}">
 
-    <center><input type="submit" value="Submit"></center>
+    <input type="submit" value="Submit">
   </form>
 </div>
      <footer class="fix2">
