--- a/final/templates/home.html
+++ b/final/templates/home.html
@@ -20,50 +20,55 @@ display:none;
   <div class="wrapper">
       <div class="top-bar fix">
         <div class="top-bar-links">
-              <ul>
-                {%if user.is_authenticated %}
-                <li>Hello,{{user.username}}</li>
-                <li><a href="accouts/logout">Logout</a></li>
-                {% else %}
-                  <li><a href="{% url 'login' %}">Login</a></li>
-                  <li><a href="{% url 'register' %}">Register</a></li>
-                   <li><a href="{% url 'help' %}">Help</a></li>
-                   {%endif%}
-              </ul>
-              
-        <div class="socialmedia">
           <ul>
-          <a href="https://www.facebook.com" class="fa fa-facebook"></a>
-          <a href="https://twitter.com" class="fa fa-twitter"></a>
-          <a href="https://www.instagram.com" class="fa fa-instagram"></a>
+            {%if user.is_authenticated %}
+            <li>Hello,{{user.username}}</li>
+            <li><a href="accouts/logout">Logout</a></li>
+              {% else %}
+              <li><a href="{% url 'register' %}">Register</a></li>
+                <li><a href="{% url 'login' %}">Login</a></li>
+            {%endif%}
+
+               
           </ul>
-                </div>
-         
-  
-         
-                 </div>      
-        
-         </div>
-           <header class="fix">
-         <div class="image">
-             
-        <img src="../static/images/dengue_banner.jpg" />
-         </div>
-  
-  
-  
-          </header>
-  <nav>
-          <ul>
-          <li><a href="{% url 'home' %}">Home</a></li>
-             <li><a href="{% url 'disease' %}">Disease Description</a></li>
-             <li><a href="{% url 'data' %}">Data</a></li>
-          <li><a href="{% url 'maps' %}">Maps</a></li>
-           <li><a href="{% url 'prediction' %}">Prediction </a></li>
-          <li><a href="{% url 'feedback' %}">Feedback </a></li>
-          <li><a href="{% url 'about' %}">About us</a></li>
-          </ul>
-           </nav>
+    
+<div class="socialmedia">
+<ul>
+<a href="https://www.facebook.com" class="fa fa-facebook"></a>
+<a href="https://twitter.com" class="fa fa-twitter"></a>
+<a href="https://www.instagram.com" class="fa fa-instagram"></a>
+</ul>
+      </div>
+
+
+
+       </div>      
+
+</div>
+ <header class="fix">
+<div class="image">
+   
+<img src="../static/images/dengue_banner.jpg" />
+</div>
+
+
+
+</header>
+<a class="weatherwidget-io" href="https://forecast7.com/en/6d9379d86/colombo/" data-label_1="COLOMBO" data-label_2="WEATHER" data-theme="original" >COLOMBO WEATHER</a>
+<script>
+!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
+</script>
+<nav>
+  <ul>
+    <li><a href="{% url 'home' %}">Home</a></li>
+       <li><a href="{% url 'dd' %}">Disease Description</a></li>
+       <li><a href="{% url 'data' %}">Data</a></li>
+    <li><a href="{% url 'maps' %}">Maps</a></li>
+     <li><a href="{% url 'prediction' %}">Prediction </a></li>
+    <li><a href="{% url 'FeedbackView' %}">Feedback </a></li>
+    <li><a href="{% url 'about' %}">About us</a></li>
+    </ul>
+ </nav>
 <br>
     <br>
     <br>
