--- a/final/templates/Data.html
+++ b/final/templates/Data.html
@@ -71,19 +71,19 @@
       <br>
       <br>
     <label for="Name"><b>Name of the officer</b></label>
-    <input type="text" id="Name" placeholder="Enter your name" name="Name">
+    <input type="text" id="Name" placeholder="Enter your name" name="Name" required>
       <br>
     <label for="Year"><b> Year </b></label>
-    <input type="text"id="Year" placeholder="Enter the year " name="Year" >
+    <input type="text"id="Year" placeholder="Enter the year " name="Year" required>
         <br>
     <label for="Month"><b>Month</b></label>
-    <input type="text" id="Month" placeholder="Enter the month" name="Month" >
+    <input type="text" id="Month" placeholder="Enter the month" name="Month" required>
       <br>
     <label for="NumberOfDengueCase"><b>Number of dengue cases</b></label>
-    <input type="text"  id="NumberOfDengueCase" placeholder="Enter the number of dengue cases" name="NumberOfDengueCase" >
+    <input type="text"  id="NumberOfDengueCase" placeholder="Enter the number of dengue cases" name="NumberOfDengueCase" required>
       <br>
       <label for="MOHOffice "><b>MOH Office</b></label>
-    <input type="text" id="MOHOffice" placeholder="Enter the MOHOffice" name="MOHOffice" >
+    <input type="text" id="MOHOffice" placeholder="Enter the MOHOffice" name="MOHOffice" required>
       <br>
 
       <center><input type="submit" value="Submit"></center>
