--- a/final/templates/Register.html
+++ b/final/templates/Register.html
@@ -9,7 +9,7 @@
      <link rel="stylesheet"  type="text/css" href="{%static 'css\main.css'%}"/>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
 <link rel="stylesheet" type="text/css" href="../static/css/Register.css" />
-  <script src="../static/js/Registration.js"></script>
+
 </head>
 
 
@@ -94,7 +94,11 @@
   </div>
 
 </form>
-
+<div>
+  {%for message in messages %}
+  <h20> {{message}}</h20>
+  {%endfor%}
+</div>
 
   <footer class="fix2">
  <div class="copyrights " >
