--- a/final/templates/Prediction.html
+++ b/final/templates/Prediction.html
@@ -9,8 +9,6 @@
 
 <link rel="stylesheet"  type="text/css" href="{%static 'css\main.css'%}"/>
 </head>
-<script src="home.js">
-</script>
 
 <body>
 <div class="wrapper">
@@ -61,7 +59,16 @@
     <li><a href="{% url 'about' %}">About us</a></li>
     </ul>
 </nav>
-          <footer class="fix2">
+<br>
+<br>
+<br>
+<br>
+<img src="C:/Users/adhee/project/final/static/images/Prediction.jpg" />
+<br> 
+<br>
+<br>
+<br>        
+<footer class="fix2">
  <div class="copyrights " >
         <div class="left">
         @ 2020 Copyright Dengue Prediction System.All Rights Reserved.
