--- a/final/templates/Prediction.html
+++ b/final/templates/Prediction.html
@@ -44,9 +44,6 @@
  
 <img src="../static/images/dengue_banner.jpg" />
 </div>
-
-
-
 </header>
 <nav>
   <ul>
@@ -63,7 +60,7 @@
 <br>
 <br>
 <br>
-<img src="C:/Users/adhee/project/final/static/images/Prediction.jpg" />
+<img src="static/images/P.jpg"/>
 <br> 
 <br>
 <br>
